# content-guide-generator

./: .gitignore  README.md  development-notes.md  generate_doctree.py  setup.cfg  setup.py
data/: TEMPLATE.md
data/templates/: most_recent_changes.md
docs/: README.md  arguments_types.md  custom_properties.md  generator_functions.md  tutorial.md  writing_the_documentation.md
src/shapescape_content_guide_generator/: __init__.py  blocks.py  entities.py  errors.py  features.py  functions.py  globals.py  items.py  main.py  recipes.py  sound_definitions.py  trades.py  utils.py
