[metadata]
name = shapescape-content-guide-generator
author = Shapescape
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    =src
packages = find:
install_requires =
    sqlite-bedrock-packs~=2.1.0

[options.entry_points]
    console_scripts =
        shapescape-content-guide-generator = shapescape_content_guide_generator.main:main_commandline

[options.packages.find]
    where = src
